@@ -1,18 +1,23 @@
 package com.keepgoing.keepgoing.worker.image.application.service;
 
+import static com.keepgoing.keepgoing.worker.support.ImageFixture.pngBytes;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 
 import com.keepgoing.keepgoing.common.image.domain.ImageProcessingStatus;
 import com.keepgoing.keepgoing.common.image.event.ImageProcessingResultEvent;
+import com.keepgoing.keepgoing.worker.image.application.dto.PreValidatedImage;
+import com.keepgoing.keepgoing.worker.image.application.dto.SanitizedImage;
 import com.keepgoing.keepgoing.worker.image.application.port.in.ImageProcessingCommand;
 import com.keepgoing.keepgoing.worker.image.application.port.out.ImageProcessingResultPublisherPort;
+import com.keepgoing.keepgoing.worker.image.application.port.out.ImageSanitizerPort;
 import com.keepgoing.keepgoing.worker.image.application.port.out.ImageStorageException;
 import com.keepgoing.keepgoing.worker.image.application.port.out.ImageStoragePort;
 import com.keepgoing.keepgoing.worker.image.domain.ImageValidationFailureReason;
@@ -41,6 +46,9 @@ class ImageProcessingServiceTest {
 	@Mock
 	ImageStoragePort imageStoragePort;
 
+	@Mock
+	ImageSanitizerPort imageSanitizerPort;
+
 	ImageProcessingService imageProcessingService;
 
 	@BeforeEach
@@ -48,19 +56,28 @@ class ImageProcessingServiceTest {
 		imageProcessingService = new ImageProcessingService(
 				Clock.fixed(PROCESSED_AT, ZoneOffset.UTC),
 				resultPublisher,
-				imageStoragePort
+				imageStoragePort,
+				imageSanitizerPort
 		);
 	}
 
 	@Test
-	@DisplayName("quarantine object가 요청 MIME과 일치하는 이미지이면 SCANNING만 발행하고 cleanup 하지 않는다")
-	void publishesOnlyScanningWhenImageMediaTypeValidationSucceeds() {
+	@DisplayName("검증된 이미지는 정제 후 secure bucket에 저장하고 quarantine object를 삭제한다")
+	void sanitizesAndStoresSecureObjectWhenImageMediaTypeValidationSucceeds() {
 		// given
 		ImageProcessingCommand command = command("image/png");
 		byte[] imageBytes = pngBytes();
+		byte[] sanitizedBytes = new byte[]{1, 2, 3};
+		SanitizedImage sanitizedImage = new SanitizedImage(
+				sanitizedBytes,
+				"image/png",
+				sanitizedBytes.length
+		);
 
 		given(imageStoragePort.readQuarantineObject(command.storageKey()))
 				.willReturn(imageBytes);
+		given(imageSanitizerPort.sanitize(any(PreValidatedImage.class), eq(imageBytes)))
+				.willReturn(sanitizedImage);
 
 		// when
 		imageProcessingService.process(command);
@@ -68,19 +85,41 @@ class ImageProcessingServiceTest {
 		// then
 		ArgumentCaptor<ImageProcessingResultEvent> eventCaptor
 				= ArgumentCaptor.forClass(ImageProcessingResultEvent.class);
+		ArgumentCaptor<PreValidatedImage> preValidatedImageCaptor
+				= ArgumentCaptor.forClass(PreValidatedImage.class);
 
-		then(imageStoragePort).should()
-				.readQuarantineObject(command.storageKey());
-		then(imageStoragePort).should(never())
-				.deleteQuarantineObject(anyString());
-		then(resultPublisher).should(times(1))
-				.publish(eventCaptor.capture());
+		InOrder inOrder = inOrder(resultPublisher, imageStoragePort, imageSanitizerPort);
+		inOrder.verify(imageStoragePort).readQuarantineObject(command.storageKey());
+		inOrder.verify(resultPublisher).publish(eventCaptor.capture());
+		inOrder.verify(imageSanitizerPort).sanitize(preValidatedImageCaptor.capture(), eq(imageBytes));
+		inOrder.verify(imageStoragePort).putSecureObject(
+				command.storageKey(),
+				sanitizedBytes,
+				sanitizedImage.contentType()
+		);
+		inOrder.verify(imageStoragePort).deleteQuarantineObject(command.storageKey());
+		inOrder.verify(resultPublisher).publish(eventCaptor.capture());
 
-		ImageProcessingResultEvent event = eventCaptor.getValue();
-		assertThat(event.publicId()).isEqualTo(command.publicId());
-		assertThat(event.status()).isEqualTo(ImageProcessingStatus.SCANNING);
-		assertThat(event.reason()).isEmpty();
-		assertThat(event.processedAt()).isEqualTo(PROCESSED_AT);
+		assertThat(eventCaptor.getAllValues())
+				.extracting(ImageProcessingResultEvent::status)
+				.containsExactly(
+						ImageProcessingStatus.SCANNING,
+						ImageProcessingStatus.SAFE
+				);
+
+		assertThat(preValidatedImageCaptor.getValue()).isEqualTo(new PreValidatedImage(
+				command.publicId(),
+				command.storageKey(),
+				command.contentType(),
+				"image/png",
+				command.fileSize(),
+				command.requestedAt()
+		));
+
+		ImageProcessingResultEvent safeEvent = eventCaptor.getAllValues().get(1);
+		assertThat(safeEvent.secureStorageKey()).isEqualTo(command.storageKey());
+		assertThat(safeEvent.contentType()).isEqualTo(sanitizedImage.contentType());
+		assertThat(safeEvent.fileSize()).isEqualTo(sanitizedImage.fileSize());
 	}
 
 	@Test
@@ -113,7 +152,7 @@ class ImageProcessingServiceTest {
 						ImageProcessingStatus.REJECTED
 				);
 
-		ImageProcessingResultEvent scanningEvent = eventCaptor.getAllValues().get(0);
+		ImageProcessingResultEvent scanningEvent = eventCaptor.getAllValues().getFirst();
 		assertThat(scanningEvent.publicId()).isEqualTo(command.publicId());
 		assertThat(scanningEvent.reason()).isEmpty();
 		assertThat(scanningEvent.processedAt()).isEqualTo(PROCESSED_AT);
@@ -123,6 +162,10 @@ class ImageProcessingServiceTest {
 		assertThat(rejectedEvent.reason())
 				.isEqualTo(ImageValidationFailureReason.CONTENT_TYPE_MISMATCH.name());
 		assertThat(rejectedEvent.processedAt()).isEqualTo(PROCESSED_AT);
+
+		then(imageSanitizerPort).shouldHaveNoInteractions();
+		then(imageStoragePort).should(never())
+				.putSecureObject(anyString(), any(), anyString());
 	}
 
 	@Test
@@ -146,7 +189,53 @@ class ImageProcessingServiceTest {
 				.deleteQuarantineObject(command.storageKey());
 
 		then(resultPublisher).shouldHaveNoInteractions();
+		then(imageSanitizerPort).shouldHaveNoInteractions();
+		then(imageStoragePort).should(never())
+				.putSecureObject(anyString(), any(), anyString());
 	}
+
+	@Test
+	@DisplayName("이미지 정제에 실패하면 object를 삭제하고 REJECTED 결과를 발행한다")
+	void deletesObjectAndPublishedRejectedWhenImageSanitizationFails() {
+		// given
+		ImageProcessingCommand command = command("image/png");
+		byte[] imageBytes = pngBytes();
+
+		given(imageStoragePort.readQuarantineObject(command.storageKey()))
+				.willReturn(imageBytes);
+		given(imageSanitizerPort.sanitize(any(PreValidatedImage.class), eq(imageBytes)))
+				.willThrow(new RuntimeException("sanitize faild"));
+
+		// when
+		imageProcessingService.process(command);
+
+		// then
+		ArgumentCaptor<ImageProcessingResultEvent> eventCaptor =
+				ArgumentCaptor.forClass(ImageProcessingResultEvent.class);
+
+		InOrder inOrder = inOrder(resultPublisher, imageStoragePort, imageSanitizerPort);
+		inOrder.verify(imageStoragePort).readQuarantineObject(command.storageKey());
+		inOrder.verify(resultPublisher).publish(eventCaptor.capture());
+		inOrder.verify(imageSanitizerPort).sanitize(any(PreValidatedImage.class), eq(imageBytes));
+		inOrder.verify(imageStoragePort).deleteQuarantineObject(command.storageKey());
+		inOrder.verify(resultPublisher).publish(eventCaptor.capture());
+
+		assertThat(eventCaptor.getAllValues())
+				.extracting(ImageProcessingResultEvent::status)
+				.containsExactly(
+						ImageProcessingStatus.SCANNING,
+						ImageProcessingStatus.REJECTED
+				);
+
+		ImageProcessingResultEvent rejectedEvent = eventCaptor.getAllValues().get(1);
+		assertThat(rejectedEvent.reason())
+				.isEqualTo(ImageValidationFailureReason.SANITIZATION_FAILED.name());
+
+		then(imageStoragePort).should(never())
+				.putSecureObject(anyString(), any(), anyString());
+
+	}
+
 
 	private static ImageProcessingCommand command(String contentType) {
 		return new ImageProcessingCommand(
@@ -156,13 +245,5 @@ class ImageProcessingServiceTest {
 				1024L,
 				REQUESTED_AT
 		);
-	}
-
-	private static byte[] pngBytes() {
-		return new byte[]{
-				(byte) 0x89, 0x50, 0x4E, 0x47,
-				0x0D, 0x0A, 0x1A, 0x0A,
-				0x00, 0x00
-		};
 	}
 }
